# OperatingSystems

Lab1/: answers.txt
Lab1/CISC324-W24-main/Labs/lab1.boilerplate/: process_com.py
Lab2/: CMakeLists.txt
Lab2/Archive/schedulingalgorithms/: CPUScheduler.h  FirstComeFirstServedScheduler.h  Process.h  RoundRobinScheduler.h
Lab2/schedulingalgorithms/: CMakeLists 12.39.36 AM.txt  FirstComeFirstServedScheduler.cpp  FirstComeFirstServedScheduler.h  Process.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  RoundRobinSchedulercp.cpp
lab3/: producer_consumers.py  readMeLab3(editable).docx
lab3/test/: producer_consumers.py
lab4.boilerplate/: dining_philosophers.py  readMe.txt
lab5/: paging_working_sets.py  reflect.txt
